titulos de juegos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>viedo juegos</title>
 </head>
 <body>
-    
+    <h1>Juegos favoritos</h1>
+    <h3>Black ops 2:</h3>
+    <h3>GTA V:</h3>
+    <h3>Minecraft:</h3>
+    <h3>overwatch:</h3>
+    <h3>Fortnite:</h3>
 </body>
 </html>
