--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <h3>Fortnite:</h3>
     <p>Tambien es un juego de disparos pero con el diferencial que este es un todos contra todos de 100 personal al tiempo y que se pueden hacer construcciones para agregarle mas complejidad.</p>
-
+    <img src="imagenes\fortnite.jpg" height="200">
 
 </body>
 </html>
