--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Juegos favoritos</h1>
-    <h3>Black ops II:</h3>
+    <h3>Call of duty Black ops II:</h3>
     <p>Es un juego de disparos que puede ser tanto individual commo coperativo segun los multiples modos de juego con los que cuenta.</p>
     <img src="imagenes\black ops.jpg" height="200">
     
