correccion de palabras 3

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>viedo juegos</title>
 </head>
 <body>
-    <h1>Juegos favoritos</h1>
+    <h1>Mis juegos favoritos</h1>
     <h3>Call of duty Black ops II:</h3>
     <p>Es un juego de disparos que puede ser tanto individual commo coperativo segun los multiples modos de juego con los que cuenta.</p>
     <img src="imagenes\black ops.jpg" height="200">
